# BTU_Virtual_University

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  railway.json  requirements.txt  schema.sql  start.py
agents/: __init__.py  base.py  coach.py  dean.py  engine.py  handoff.py  registry.py  router.py
agents/professors/: __init__.py  base_professor.py  people.py  performance.py  place.py  platform.py  policy.py  positioning.py  pricing.py  process.py  profit.py  purpose.py
agents/prompts/: __init__.py  coach.py  dean.py  professors.py
api/: app.py  index.py
api/middleware/: auth.py
api/routes/: agents.py  auth.py  chat.py  discuss.py  doubt.py  health.py  ingest.py  library.py  sprint.py  wheel.py
api/schemas/: auth.py  chat.py  discuss.py  doubt.py  library.py
config/: agent_config.py  settings.py
data/chapters/: .gitkeep
docs/: generate_guide.py
frontend/: next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthScreen.tsx  ChatPanel.tsx  DashboardPanel.tsx  DoubtPanel.tsx  LibraryPanel.tsx  Sidebar.tsx
frontend/lib/: api.ts  types.ts
gamification/: __init__.py  badges.py  sprint_engine.py  wheel_of_fortune.py
memory/: __init__.py  models.py  sprint_tracker.py  store.py  summariser.py
rag/: agentic_pipeline.py  chunker.py  embedder.py  ingest.py  pipeline.py  vectordb.py
static/: index.html
tests/: __init__.py
tests/integration/: test_api.py
tests/sme/: __init__.py  eval_place.py
tests/unit/: test_chunker.py  test_handoff.py  (+1 more)
